--- a/LXU-Cache/pom.xml
+++ b/LXU-Cache/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.luzeping</groupId>
-    <artifactId>LXU-Cache</artifactId>
+    <groupId>com.lzp.lxucache</groupId>
+    <artifactId>lxucache-server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <parent>
