--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -1,3 +1,8 @@
+#每个缓存的最大条目数。总共有和逻辑处理器相同数量的缓存。实际最大条目数 = lruCacheMaxSize*逻辑处理器个数
 lruCacheMaxSize=10000
+
+#监听端口号
 port=8888
+
+#每个缓存的缓存淘汰策略
 strategy=LRU
