ENHANCE 增加持久化功能

--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #每个缓存的最大条目数。总共有和逻辑处理器相同数量的缓存。实际最大条目数 = lruCacheMaxSize*逻辑处理器个数
-lruCacheMaxSize=10000
+lruCacheMaxSize=100000
 
 #监听端口号
 port=8887
@@ -12,3 +12,6 @@ pollingInterval=10
 
 #队列长度
 queueSize=65536
+
+#生成快照的条目数
+snapshot-batch-count=16384
