ENHANCE 增加集群功能

--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -15,3 +15,12 @@ queueSize=65536
 
 #生成快照的条目数（必须配置为2的整次幂）
 snapshot-batch-count=16384
+
+#是否开启集群模式
+cluster-enabled=no
+
+#是否是主节点，只有第一次开启集群需要配置
+isMaster=yes
+
+#主节点的ip和端口（如果是从节点）
+masterIpAndPort=127.0.0.1:4445
