--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 lruCacheMaxSize=100000
 
 #监听端口号
-port=8887
+port=8885
 
 #每个缓存的缓存淘汰策略
 strategy=LRU
@@ -17,10 +17,10 @@ queueSize=65536
 snapshot-batch-count=16384
 
 #是否开启集群模式
-cluster-enabled=no
+cluster-enabled=yes
 
 #是否是主节点，只有第一次开启集群需要配置
 isMaster=no
 
-#主节点的ip和端口（如果是从节点）
-masterIpAndPort=127.0.0.1:8887
+#主节点的ip和端口（如果是从节点），不要写环回地址
+masterIpAndPort=10.240.30.78:8887
