--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -13,11 +13,11 @@ pollingInterval=10
 #队列长度
 queueSize=65536
 
-#生成快照的条目数（必须配置为2的整次幂）
+#生成快照的条目数（暂时必须配置为2的n次方）
 snapshot-batch-count=16384
 
 #是否开启集群模式
-cluster-enabled=yes
+cluster-enabled=no
 
 #是否是主节点，只有第一次开启集群需要配置
 isMaster=yes
