delete Redundant files

--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -17,7 +17,7 @@ queueSize=65536
 snapshot-batch-count=16384
 
 #是否开启集群模式
-cluster-enabled=yes
+cluster-enabled=no
 
 #是否是主节点，只有第一次开启集群需要配置
 isMaster=no
