--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 lruCacheMaxSize=100000
 
 #监听端口号
-port=8885
+port=8886
 
 #每个缓存的缓存淘汰策略
 strategy=LRU
@@ -17,7 +17,7 @@ queueSize=65536
 snapshot-batch-count=16384
 
 #是否开启集群模式
-cluster-enabled=no
+cluster-enabled=yes
 
 #是否是主节点，只有第一次开启集群需要配置
 isMaster=no
