--- a/LXU-Cache/src/main/resources/config.properties
+++ b/LXU-Cache/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 lruCacheMaxSize=100000
 
 #监听端口号
-port=8886
+port=8887
 
 #每个缓存的缓存淘汰策略
 strategy=LRU
@@ -20,7 +20,7 @@ snapshot-batch-count=16384
 cluster-enabled=yes
 
 #是否是主节点，只有第一次开启集群需要配置
-isMaster=no
+isMaster=yes
 
 #主节点的ip和端口（如果是从节点），不要写环回地址
 masterIpAndPort=127.0.0.1:8887
