--- a/LXU-Cache/pom.xml
+++ b/LXU-Cache/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>lxucache-server</artifactId>
     <version>1.0.1</version>
     <packaging>jar</packaging>
+    <description>high-performance distributed cache middleware written in Java,similar to redis</description>
+    <developers>
+        <developer>
+            <name>luzeping</name>
+            <email>zeping_lu@163.com</email>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
